# win32-fast-switch-audio

./: .gitignore  AboutDialog.cpp  AboutDialog.h  Audio.cpp  Audio.h  CMakeLists.txt  ComPtr.h  FastSwitchAudio.cpp  FastSwitchAudio.h  FastSwitchAudio.rc  FastSwitchAudio.sln  FastSwitchAudio.vcxproj  FastSwitchAudio.vcxproj.filters  LICENSE  ListView.cpp  ListView.h  PopupMenu.h  README.md  Resource.h  framework.h  utils.h
Audio/: Audio.cpp  Audio.h  Device.cpp  Device.h  DeviceImpl.cpp  DeviceImpl.h  DeviceManager.cpp  DeviceManager.h  DeviceManagerImpl.cpp  DeviceManagerImpl.h  NotificationClient.cpp
src/: ComPtr.h  FastSwitchAudio.cpp  FastSwitchAudio.h  FastSwitchAudio.rc  PolicyConfig.h  PopupMenu.h  resource.h  targetver.h
src/Audio/: Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  NotificationClient.cpp
